<resources>
    <string name="app_name">EXPEDITEE_MOBILE</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_pendientes">Pendientes</string>
    <string name="menu_cobro">Cobros pendientes</string>
    <string name="menu_chat">Chat</string>
    <string name="efectivo">Efectivo</string>
    <string name="mercado_pago">Mercado Pago</string>
    <string name="ubicacion">Ubicación</string>
    <string name="chat">Mensaje privado</string>
    <string name="contactos">Chats</string>
    <string name="cobro_pendiente">Cobro pendiente</string>
    <string name="menu_salir">Salir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>