<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.expeditee_mobile.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_pendientes"
        android:name="com.example.expeditee_mobile.ui.pendientes.PendientesFragment"
        android:label="@string/menu_pendientes"
        tools:layout="@layout/fragment_pendientes" />

    <fragment
        android:id="@+id/nav_cobro"
        android:name="com.example.expeditee_mobile.ui.cobro.CobroFragment"
        android:label="@string/menu_cobro"
        tools:layout="@layout/fragment_cobro" />
</navigation>